<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bottom_sheet_bg"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <View
                android:layout_width="60dp"
                android:layout_marginTop="5dp"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/teal_700"/>

            <TextView
                style="@style/TextHeader"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sort_by" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbDefault"
                    android:layout_width="match_parent"
                    android:text="@string/sort_default"
                    android:textIsSelectable="true"
                    android:layoutDirection="rtl"
                    android:checked="true"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbStarDown"
                    android:layout_width="match_parent"
                    android:text="@string/star_down"
                    android:textIsSelectable="true"
                    android:layoutDirection="rtl"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbStarUp"
                    android:layout_width="match_parent"
                    android:text="@string/star_up"
                    android:layoutDirection="rtl"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbRatingDown"
                    android:layout_width="match_parent"
                    android:text="@string/rating_down"
                    android:layoutDirection="rtl"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbRatingUp"
                    android:layout_width="match_parent"
                    android:text="@string/rating_up"
                    android:layoutDirection="rtl"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbPriceUp"
                    android:layout_width="match_parent"
                    android:text="@string/price_up"
                    android:layoutDirection="rtl"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbPriceDown"
                    android:layout_width="match_parent"
                    android:text="@string/price_down"
                    android:layoutDirection="rtl"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>