<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bottom_sheet_bg"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <View
                android:layout_width="60dp"
                android:layout_marginTop="5dp"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/teal_700"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="1.2"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:scaleY="1.2"
                android:src="@drawable/ic_close"/>

                <TextView
                    style="@style/TextTitle"
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:text="@string/generic_stars" />

                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/rsStar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="1"
                    android:valueFrom="0"
                    android:valueTo="5"
                    app:values="@array/initial_slider_values" />

                <TextView
                    style="@style/TextTitle"
                    android:layout_width="match_parent"
                    android:text="@string/generic_ratings" />
                <com.google.android.material.slider.RangeSlider

                    android:id="@+id/rsRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="0.2"
                    android:valueFrom="0.0"
                    android:valueTo="10.0"
                    app:values="@array/initial_slider_values" />

                    <TextView
                        style="@style/TextTitle"
                        android:layout_width="wrap_content"
                        android:text="@string/generic_price" />

                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/rsPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:valueFrom="10"
                    android:valueTo="1000"
                    android:stepSize="5"
                    app:values="@array/initial_price_slider_values" />

            <LinearLayout
                android:id="@+id/llBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/btClearAll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/clear_all"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btOk"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/ok" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>